# dotfiles

./: .editorconfig  .gitignore  LICENSE  README  README.md  install_stow.sh  ln_common.sh  setup.sh  setup_minimal_linux.sh  setup_minimal_windows.sh  setup_quick_n_dirty.sh
PC-Mordor-Arch-home/: .profile
PC-Mordor-Arch/etc/: environment  fstab  makepkg.conf  nsswitch.conf  sddm.conf
PC-Mordor-Arch/etc/pulse/: default.pa
PC-Mordor-Arch/etc/ssh/: sshd_config
alacritty/.config/alacritty/: alacritty.toml  alacritty.yml
aliases/: .aliases  .aliases.d
aliases/.alias/: aliases.sh  by_host  by_host.sh  core_utils  core_utils.sh  files  files.sh  fr  graveyard.sh  important_utils  important_utils.sh  jp  lang_fr.sh  lang_jp.sh  misc  misc.sh  other_utils  other_utils.sh  pacman
bash/: .aliases  .aliases_jp  .bashrc  .profile
bash/.alias/: core_utils  files  important_utils  jp  misc  other_utils  pacman
colors/: .Xresources  .dircolors
compton/.config/: compton.conf
devilspie/.config/devilspie2/: devilspie2.lua  dropdown.lua  opacity.lua  opacity_fix.lua
dunst/.config/dunst/: dunstrc
git/: .gitconfig
git/.config/git/: common.gitconfig
hosts/PC-Mordor-Arch-home/: .gitconfig  .profile  .wgetrc
hosts/PC-Mordor-Arch/etc/: environment  fstab  hosts  pacman.conf  sddm.conf
hosts/PC-Mordor-NixOS-home/: .gitconfig  .profile  .zshenv
hosts/common-home/: .gitconfig  .profile
hosts/computecanada-home/: .gitconfig  .profile  .zshenv
hosts/idcc-macOS-home/: .gitconfig  .zlogin  .zprofile
hosts/idcc-node-linux-home/: .gitconfig  .profile
hypr/.config/hypr/: hyprland.conf  hyprpaper.conf
i3/.config/i3/: config  status.toml
i3blocks/.config/i3blocks/: config
latexmk/: .latexmkrc
lf/.config/lf/: lfrc  preview
lint/: .pylintrc
lint/.config/: pycodestyle  pylintrc
mimeapps/.config/: fix_mimeapps.py  mimeapps.list
mpv/.config/mpv/: config  input.conf
ncmpcpp/.config/ncmpcpp/: bindings  config
nushell/.config/nushell/: config.nu  env.nu
nvim/.config/nvim/: .gitignore  .ignore  coc-settings.json  init.lua  lazy-lock.json  packer-lock.json
pacdef/.config/pacdef/: .gitignore  pacdef.conf  pacdef.yaml
picom/.config/: picom.conf
polybar/.config/polybar/: config  polybar.sh
ptpython/.config/ptpython/: config.py
pypoetry/.config/pypoetry/envs/default/: pyproject.toml
pypoetry/.config/pypoetry/envs/default310/: pyproject.toml
python/.config/python/: pythonstartup.py
ranger/.config/ranger/: commands.py  rc.conf  rifle.conf
readline/: .inputrc
ripgrep/.config/ripgrep/: rc
rofi/.config/rofi/: config  config.rasi
scripts/: update_ipfilter.sh
scrobblez/.config/scrobblez/: .gitignore  config.py
setup/: install_stow.sh  ln_common.sh  setup.sh  setup_brew_macos.sh  setup_minimal_computecanada.sh  setup_minimal_idcc_linux_node.sh  setup_minimal_linux.sh  setup_minimal_windows.sh  wheels.sh
setup/installers/: _ARCH.sh  _utils.sh  autoconf.sh  automake.sh  bat.sh  cmake.sh  delta.sh  fasd.sh  fd.sh  frece.sh  fzf.sh  fzy.sh  gettext.sh  lf.sh  m4.sh  mosh.sh  ncurses.sh  nvim.sh  python.sh  python_packages.sh  ripgrep.sh  ruff.sh  sqlite3.sh  stow.sh  tmux.sh  xclip.sh  xsel.sh  zoxide.sh  zsh.sh
skhd/.config/skhd/: skhdrc
snippets/.config/lsp_snippets/: python.json  tex.json
termite/.config/termite/: config
thunar/.config/Thunar/: uca.xml
tmux/: .tmux.conf
tridactyl/.config/tridactyl/: tridactylrc
uv/.config/uv/: install.sh
uv/.config/uv/envs/default/: .venv  pyproject.toml
vim/: .vimrc
vim/.config/nvim/: coc-settings.json
vim/.vim/: .gitignore  autocmds.vim  colors.vim  commands.vim  functions.vim  mappings.vim  options.vim  plugin_settings.vim  plugins.vim  plugins_loader.vim  statusline.vim  theming.vim
vim/.vim/mappings/: leader.vim  misc.vim  navigation.vim  plugins.vim
waybar/.config/waybar/: config  style.css
xinit/: .xinitrc
xmodmap/: .Xmodmap
zsh/: .zprofile  .zshrc
(+429 files in other folders)
