[tool.poetry]
name = "default"
version = "0.1.0"
description = ""
authors = ["Mateen Ulhaq <mulhaq2005@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

accelerate = "0.15.0"
aim = "^3.17.5"
arxiv = "^2.1.0"
arxiv2bib = "^1.0.8"
better-exceptions = "^0.3.3"
bjontegaard = "^1.2.0"
black = "^23.7.0"
catalyst = "^22.4"
chess = "^1.10.0"
compressai = "^1.2.4"
gspread = "^5.12.3"
h5py = "^3.9.0"
hydra-core = "^1.3.2"
isort = "^5.12.0"
matplotlib = "^3.7.2"
memory-tempfile = "^2.2.3"
numpy = "^1.25.2"
omegaconf = "^2.3.0"
opencv-python = "^4.8.0.74"
pandas = "^2.0.3"
pillow = "^10.0.0"
plotly = "^5.15.0"
plyfile = "^1.0.1"
poetry = "^1.5.1"
polars = ">=0.18,<1.0"
praw = "^7.7.1"
ptpython = "^3.0.23"
pycryptodome = "^3.20.0"
pyntcloud = ">=0.3,<1.0"
pyotp = "^2.9.0"
pyperclip = "^1.8.2"
pyqrcode = "^1.2.1"
pytest = "^7.4.0"
pytorch-msssim = "^1.0.0"
pyyaml = "^6.0.1"
scikit-learn = "^1.3.0"
scipy = "^1.11.1"
seaborn = ">=0.12,<1.0"
selenium = "^4.17.2"
sphinx = "^4.0"
sphinx-book-theme = "^1.0.1"
sympy = "^1.12"
tekore = "^5.3.0"
tensorboard = "^2.13.0"
tensorboardx = "^2.6.2.2"
toml = "^0.10.2"
torch = ">=2.0.0, !=2.0.1"
torch-geometric = "^2.3.1"
torch-tb-profiler = "^0.4.3"
torchinfo = "^1.8.0"
torchvision = ">=0.15,<1.0"
tqdm = "^4.65.0"
typing-extensions = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
