[tool.poetry]
name = "default310"
version = "0.1.0"
description = ""
authors = ["Mateen Ulhaq <mulhaq2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
addict = "^2.4.0"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
open3d = "^0.17.0"
pandas = "^2.0.3"
pillow = "^10.0.0"
plotly = "^5.15.0"
poetry = "^1.5.1"
pyyaml = "^6.0.1"
scikit-learn = "^1.3.0"
scipy = "^1.11.1"
seaborn = "^0.12.2"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
