[project]
name = "default"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "hydra-core>=1.3.2",
    "numpy>=1.24.4",
    "omegaconf>=2.3.0",
    "opencv-python>=4.8.1.78",
    "pandas>=2.0.3",
    "pillow>=10.4.0",
    "plotly>=5.24.1",
    "polars>=1.8.2",
    "ptpython>=3.0.29",
    "pyyaml>=6.0.2",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "toml>=0.10.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "typing-extensions>=4.12.2",
]
